<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home_entry_item_normal" >

            <ImageView
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/azy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@drawable/home_entry_item_normal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home_entry_item_normal" >

            <ImageView
                android:id="@+id/menu_set"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_child_configs" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:background="@drawable/home_entry_item_normal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="2.1"
		    android:orientation="horizontal">
            
		    <LinearLayout 
		       android:layout_width="0dp"
		       android:layout_height="match_parent"
		       android:layout_weight="1" >
		        
		    </LinearLayout>
            
		    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7" >
			<com.example.speedupdemo.view.CleanView
                android:id="@+id/cv_cleanview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            

            <ImageView
                android:id="@+id/iv_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/home_score_normal_bg" />
				
            <TextView
                android:id="@+id/tv_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/menu_percent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_scale"
                android:layout_toRightOf="@id/tv_scale"
                android:text="@string/percent" />

            <TextView
                android:id="@+id/button_speed_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_scale"
                android:layout_centerHorizontal="true"
                android:background="@drawable/home_speedup1"
                android:text="@string/speed_up" 
                android:textSize="15sp"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
        
		    <LinearLayout 
		       android:layout_width="0dp"
		       android:layout_height="match_parent"
		       android:layout_weight="1" >
		        
		    </LinearLayout>
		    
		</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/speed_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_entry_item_normal"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_rocket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_rocket" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_up" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/software_manager"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_entry_item_normal"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_softmgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_softmgr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/software_manager" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_entry_item_normal"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_phonemgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_phonemgr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detection" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_entry_item_normal"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_telmgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_telmgr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/file_manager"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_entry_item_normal"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_filemgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_filemgr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_manager" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/garbage_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_entry_item_normal"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_sdclean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_sdclean" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garbage_clear" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>