<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.example.speedupdemo.view.TitleLayout
        android:id="@+id/software_title" 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:background="@drawable/home_entry_item_normal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5" 
            android:orientation="horizontal">
            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6" 
            android:orientation="horizontal">
            
            <LinearLayout 
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="0.5" >
               </LinearLayout>
               
            <LinearLayout 
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2.5" >
                <com.example.speedupdemo.view.SoftwareView 
                    android:id="@+id/software_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout 
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2.5" 
               android:orientation="vertical">
                <LinearLayout 
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="horizontal" >
              	<LinearLayout 
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1" 
               android:gravity="center">
              	    <TextView 
              	        android:layout_width="wrap_content"
              	        android:layout_height="wrap_content"
              	        android:background="@drawable/blue_space"/>
              	</LinearLayout>
              	<LinearLayout 
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="6" 
               android:gravity="center">
              	    <TextView 
              	        android:layout_width="wrap_content"
              	        android:layout_height="wrap_content"
              	        android:text="手机内置空间"/>
              	</LinearLayout>
                </LinearLayout>
                 <LinearLayout 
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1">
                       	<LinearLayout 
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1" 
               android:gravity="center">
              	    <TextView 
              	        android:layout_width="wrap_content"
              	        android:layout_height="wrap_content"
              	        android:background="@drawable/green_space"/>
              	</LinearLayout>
              	<LinearLayout 
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="6"
               android:gravity="center" >
              	    <TextView 
              	        android:layout_width="wrap_content"
              	        android:layout_height="wrap_content"
              	        android:text="外置存储空间"/>
              	</LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" >
        </LinearLayout>
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/inner_space" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ProgressBar
                    android:id="@+id/software_progress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:progressDrawable="@drawable/software_progress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" 
                android:orientation="horizontal">
                <LinearLayout 
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="2">
                    
                </LinearLayout>
                <RelativeLayout 
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1.2">
                      <TextView 
                    android:id="@+id/software_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:textSize="12sp"/>
                </RelativeLayout>
              
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/outer_space" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ProgressBar
                    android:id="@+id/software_progress2"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:progressDrawable="@drawable/software_progress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
                 <LinearLayout 
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="2">
                    
                </LinearLayout>
                <RelativeLayout 
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1.2">
                      <TextView 
                    android:id="@+id/software_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:textSize="12sp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manager_allapp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/home_entry_item_normal"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_software"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrows_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manager_systemapp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/home_entry_item_normal"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_software"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrows_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manager_userapp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/home_entry_item_normal"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_software"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrows_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >
    </LinearLayout>

</LinearLayout>